force-app/main/default/objects/CourseStatus__c/CourseStatus__c.object-meta.xml
<CustomObject>
    <label>Course Status</label>
    <nameField>
        <displayFormat>CS-{0000}</displayFormat>
        <label>Course Status Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Courses Status</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>