force-app/main/default/objects/CourseStatus__c/fields/ApprovedModules__c.field-meta.xml
<CustomField>
    <fullName>ApprovedModules__c</fullName>
    <label>Approved Modules</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>