force-app/main/default/objects/CourseStatus__c/fields/Course_Accomplished__c.field-meta.xml
<CustomField>
    <fullName>Course_Accomplished__c</fullName>
    <formula>Progress__c = 1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Course Accomplished</label>
    <type>Checkbox</type>
</CustomField>