force-app/main/default/objects/CourseStatus__c/fields/NumberofTimesCompleted__c.field-meta.xml
<CustomField>
    <fullName>NumberofTimesCompleted__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Number of Times Completed</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>