force-app/main/default/objects/CourseStatus__c/fields/Progress__c.field-meta.xml
<CustomField>
    <fullName>Progress__c</fullName>
    <formula>ApprovedModules__c / Course__r.ActiveModules__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Progress</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>