force-app/main/default/objects/CourseStatus__c/validationRules/ApprovedModulesCanNotBeNull.validationRule-meta.xml
<ValidationRule>
    <fullName>ApprovedModulesCanNotBeNull</fullName>
    <active>true</active>
    <description>The Approved Modules field cannot be null.</description>
    <errorConditionFormula>ISBLANK(ApprovedModules__c)</errorConditionFormula>
    <errorMessage>The Approved Modules cannot be null.</errorMessage>
</ValidationRule>