force-app/main/default/objects/CourseStatus__c/validationRules/Course_cannot_change.validationRule-meta.xml
<ValidationRule>
    <fullName>Course_cannot_change</fullName>
    <active>true</active>
    <errorConditionFormula>ISCHANGED( Course__c )</errorConditionFormula>
    <errorMessage>Course cannot be changed</errorMessage>
</ValidationRule>