force-app/main/default/objects/CourseStatus__c/validationRules/CourseStatusMustBeActive.validationRule-meta.xml
<ValidationRule>
    <fullName>CourseStatusMustBeActive</fullName>
    <active>false</active>
    <errorConditionFormula>NOT(ISPICKVAL(Course__r.Status__c,&quot;Active&quot;))</errorConditionFormula>
    <errorDisplayField>Course__c</errorDisplayField>
    <errorMessage>Course Status must be related to a Course with the Status Active</errorMessage>
</ValidationRule>