force-app/main/default/objects/CourseStatus__c/validationRules/MemberProgram.validationRule-meta.xml
<ValidationRule>
    <fullName>MemberProgram</fullName>
    <active>true</active>
    <description>Validate that member&#39;s program is the same as Courses&#39;s program</description>
    <errorConditionFormula>Member__r.FieloPLT__Program__c !=  Course__r.Program__c</errorConditionFormula>
    <errorMessage>The member should belong to the Course&#39;s program.</errorMessage>
</ValidationRule>